Skip to content
GitLab
Explore
Sign in
GNOME
gedit
Issues
#149
Closing a window will not stop loading a file
Create a big text file
Open top
Open it in gedit
Close the window (using the X button)
Notice that top still shows activity in gedit
To upload designs, you'll need to enable LFS and have an admin enable hashed storage.
More information