tab: Cancel loading operation when tab is disposed

Cancel the loading operation when the tab is disposed. Add a pointer to the tab
in the LoaderData structure because GTask keeps an hard reference to the source
object avoiding it to be disposed when the tab is removed from the notebook.

Closes: https://gitlab.gnome.org/GNOME/gedit/issues/149